# library-website-backend-module

./: .env  README.md  database.db  main.py  pyproject.toml
modules/book/: book_controller.py  book_model.py  book_schema.py  book_service.py  book_validator.py
modules/lending_deatails/: lending_controller.py  lending_model.py  lending_schema.py  lending_service.py  lending_validator.py
modules/requests/: request_controller.py  request_model.py  request_schema.py  request_service.py  request_validator.py
modules/user/: user_controller.py  user_model.py  user_schema.py  user_service.py  user_validator.py
util/: auth.py  database.py
